--- a/TodoApp.csproj
+++ b/TodoApp.csproj
@@ -19,4 +19,14 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <!-- Include Assets directory with icon -->
+    <AvaloniaResource Include="Assets\**" />
+    
+    <!-- Copy assets to output directory -->
+    <Content Include="Assets\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
